Fixed layout white space footer issue

--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -4,8 +4,7 @@
   color: #e49023;
   background-color: #002f4b;
   font-family: "Josefin Sans", sans-serif;
-  max-width: 960;
-  /* padding: 250px 10px; */
+  height: 100%;
 }
 
 html {
